# finalynx

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.fr.md  README.md  Untitled.ipynb  assistant.py  check.sh  demo.py  install.sh  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  conventional-pr.yml  publish-to-test-pypi.yml  semantic-release.yml
_old/: finary_assistant.py
doc/: TODO.md  generate_documentation.sh
docs/: README.md  TODO.md  conf.py  finalynx.copilot.md  finalynx.fetch.md  finalynx.md  finalynx.portfolio.md  finalynx.simulator.md  index.md  modules.md
docs/project/: TODO.md
docs/quickstart/: customization.md  getting_started.md  installation.md  tutorials.md
docs/tutorials/: customization.md  getting_started.md  installation.md  tutorials.md
examples/: demo.py  full_example.py  telegram_bot.py
examples/tutorials/: 10_targets.py  1_minimal.py  6_dashboard.py  7_structure.py  8_buckets.py  9_attributes.py  README.md
examples/tutorials/1_basics/: 1_minimal.py  2_theme.py  3_login.py  4_export.py  5_display_options.py  6_dashboard.py  7_sources.py
examples/tutorials/2_portfolio/: 10_attributes.py  11_targets.py  12_envelopes.py  1_structure.py  2_buckets.py  3_attributes.py  4_targets.py  5_envelopes.py  8_structure.py  9_buckets.py
examples/tutorials/3_simulation/: 1_basics.py  2_template.py
examples/tutorials/4_budget/: 1_setup.py
finalynx/: __init__.py  __main__.py  __meta__.py  __usage__.py  assistant.py  config.py  console.py  theme.py  usage.py
finalynx/analyzer/: __init__.py  analyzer.py  asset_class.py  asset_subclass.py  envelopes.py  investment_state.py  lines.py  subasset_class.py
finalynx/budget/: __init__.py  _render.py  _review.py  budget.py  expense.py  render_table.py  source_base_expense.py  source_n26.py
finalynx/copilot/: __init__.py  copilot.py  recommendations.py
finalynx/dashboard/: __init__.py  dashboard.py
finalynx/fetch/: __init__.py  _source_template.py  fetch.py  fetch_base.py  fetch_finary.py  fetch_key.py  fetch_line.py  fetch_match.py  finary_fetch.py  source_base.py  source_base_line.py  source_finary.py  source_realt.py
finalynx/parse/: __init__.py  json.py  node_from_dict.py  parser.py
finalynx/portfolio/: __init__.py  bucket.py  constants.py  envelope.py  folder.py  hierarchy.py  line.py  node.py  portfolio.py  render.py  shared_folder.py  targets.py
finalynx/simulator/: __init__.py  actions.py  events.py  recurrence.py  simulator.py  timeline.py
finary_assistant/: LICENSE  __init__.py  __main__.py  __meta__.py  assistant.py  bucket.py  fetch.py  finary_fetch.py  folder.py  line.py  node.py  targets.py
finary_assistant/advisor/: __init__.py  advisor.py
finary_assistant/copilot/: __init__.py  copilot.py
finary_assistant/fetch/: __init__.py  finary_fetch.py
finary_assistant/patrimoine/: __init__.py  hierarchy.py  line.py
finary_assistant/portfolio/: __init__.py  bucket.py  constants.py  folder.py  line.py  node.py  portfolio.py  targets.py
finary_assistant/simulator/: __init__.py  simulator.py
tests/: test_dryrun.py
