[tool.poetry]
name = "finary-assistant"
version = "0.1.3"
description = "A command line investment assistant to organize your portfolio and simulate its future to reach your life goals."
authors = ["MadeInPierre <pielaclau@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "finary_assistant"}]

[tool.poetry.dependencies]
python = "^3.8"
rich = "12.0.1"
docopt = "0.6.2"
fuzzywuzzy = "0.18.0"
requests = "2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pdoc3 = "^0.10.0"
commitizen = "^2.42.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "finary_assistant/__meta__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.3"
tag_format = "v$version"

