[tool.poetry]
name = "finalynx"
version = "1.1.1"
description = "A command line investment assistant to organize your portfolio and simulate its future to reach your life goals."
authors = ["MadeInPierre <pielaclau@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "finalynx"}]
include = [{ path = "finalynx/finary_api/**/*" }]

[tool.poetry.dependencies]
python = "^3.8"
rich = "12.0.1"
docopt = "0.6.2"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
requests = "2.28.2"
unidecode = "^1.3.6"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^5.0.0"
pdoc3 = "^0.10.0"
commitizen = "^2.42.0"
pre-commit = "^3.0.4"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "finalynx/__meta__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
commit_subject = "chore(release): auto bump version to {version}"
build_command = "pip install poetry && poetry build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.1"
tag_format = "v$version"
