[tool.poetry]
name = "finalynx"
version = "1.14.5"
description = "A command line investment assistant to organize your portfolio and simulate its future to reach your life goals."
authors = ["MadeInPierre <pielaclau@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "finalynx"}]
include = [{ path = "finalynx/finary_api/**/*" }]

[tool.poetry.dependencies]
python = "^3.10"
rich = "12.0.1"
docopt = "0.6.2"
unidecode = "^1.3.6"
numpy = "^1.24.2"
nicegui = "^1.2.13"
finary-uapi = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^5.0.0"
pdoc3 = "^0.10.0"
commitizen = "^2.42.0"
pre-commit = "^3.0.4"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
sphinx = "^6.1.3"
myst-parser = "^0.19.1"
sphinx-rtd-theme = "^1.2.0"
sphinx-autodoc2 = "^0.4.2"
types-docopt = "^0.6.11.3"
types-requests = "^2.28.11.15"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "finalynx/__meta__.py:__version__",
    "pyproject.toml:version",
    "docs/conf.py:release"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
commit_subject = "chore(release): auto bump version to {version}"
build_command = "pip install poetry && poetry build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.14.5"
tag_format = "v$version"

[tool.mypy]
exclude = [
    "finary_api/*",
    "docs/*",
    "tests/*.py"
]
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
no_namespace_packages = true
implicit_reexport = true
